# advent_of_code

./: .gitignore  .mise.toml  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
scripts/: create_day.sh
src/: main.py  main.rs  utils.py
src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs
src/year2017/: day01.rs  day02.rs
src/year2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  mod.rs
src/year2021/: day01.rs  day02.rs  day03.rs
src/year2022/: day01.rs
src/year_2015/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py
src/year_2022/: day_01.py  day_02.py
src/year_2023/: day_01.py  day_02.py
src/year_2024/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py
src/year_2025/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_06.txt  day_07.py  day_07.txt
tests/: test_main.py
tests/year_2015/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py
tests/year_2022/: test_day_01.py  test_day_02.py
tests/year_2023/: test_day_01.py  test_day_02.py
tests/year_2024/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py
tests/year_2025/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py
