[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["fr3dch3n <10710973+fr3dch3n@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
rust-crypto = "^0.2"
rayon = "1.5"