[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Frederik Mars <10710973+fr3dch3n@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
pytest-watch = "^4.2.0"
pytest-xdist = "^3.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
